# presets

./: CMakeLists.txt  README.md  build_log.txt  build_release.bat  generate_screenshot.py  install.bat
Source/: AudioEffect.h  EffectChain.cpp  EffectChain.h  ModernLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisualControls.h
Source/Effects/: ChorusEffect.h  CompressorEffect.h  DelayEffect.h  DistortionEffect.h  DriveEffect.h  FilterEffect.h  GainEffect.h  LadderFilterEffect.h  LimiterEffect.h  NoiseGateEffect.h  PannerEffect.h  PhaserEffect.h  ReverbEffect.h
Tests/: ScreenshotTest.cpp
example/: all_effects.yaml  basic_chain.yaml  creative_chain.yaml  direct_usage_vocal_chain.yaml  legacy_xml.xml  modern_json.json  ui_showcase.yaml
sdk/: README.md
sdk/go/: example_generator.go  preset_engine.go
sdk/python/: example_generator.py  preset_engine.py
